--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "kolbs-reflection",
-    "slug": "kolbs-reflection",
+    "slug": "kolbs-reflection-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -37,6 +37,12 @@
     "plugins": [
       "expo-sqlite",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "7eb81e00-c028-4052-9115-530ff4efe07b"
+      }
+    },
+    "owner": "jowilks"
   }
 }
