--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~54.0.30",
     "expo-file-system": "~19.0.21",
     "expo-local-authentication": "~17.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
