--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
     },
     "plugins": [
       "expo-sqlite",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-document-picker"
     ],
     "extra": {
       "eas": {
