--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kolbs-reflection",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.6.13",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-local-authentication": "~17.0.8",
     "expo-notifications": "~0.32.15",
