--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.joanne.kolbsreflection"
     },
     "web": {
       "favicon": "./assets/favicon.png"
