--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-ai/apple": "^0.11.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
+    "ai": "^6.0.19",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
