LMBL-108 - Android Platform Support: Define Minimum OS and Gemini Nano Capability

--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "minSdkVersion": 29,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.joanne.kolbsreflection"
