LMBL-112 -jo/lmbl-112-android-internal-only-distribution-via-eas-no-play-store

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "platform": [
-      "ios"
+      "ios",
+      "android"
     ],
     "ios": {
       "supportsTablet": true,
