--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
+    "build:android:preview": "eas build --platform android --profile preview",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
